--- a/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
@@ -30,13 +30,14 @@
                                 <th>{{ 'view.user.permissions.table_headers.show_link_search'|trans }}</th>
                                 <th>{{ 'view.user.permissions.table_headers.specific_roles'|trans }}</th>
                             </tr>
-                            {% for contentType in emsco_get_content_types() %}
+                            {% for contentType in contentTypes %}
+                                {{ dump(contentType) }}
                                 <tr class="text-{{ contentType.color }}">
                                     <td class="text-center">{{ contentType.name }}</td>
                                     <td class="text-center"><i class="{% if contentType.icon %}{{ contentType.icon }}{% else %}fa fa-book{% endif %}"></i></td>
-                                    {% for role in [contentType.roles.view, contentType.roles.create, contentType.roles.edit, contentType.roles.publish, contentType.roles.delete, contentType.roles.trash, contentType.roles.archive, contentType.roles.show_link_create, contentType.roles.show_link_search] %}
-                                        <td class="{{ html_classes({'text-muted': role == 'not-defined'}) }} ">
-                                            {{ role|trans }}
+                                    {% for role in ['view', 'create', 'edit', 'publish', 'delete', 'trash', 'archive', 'show_link_create', 'show_link_search'] %}
+                                        <td class="{{ html_classes({'text-muted': contentType.roles[role] == 'not-defined'}) }} ">
+                                            {{ contentType.roles[role]|trans }}
                                         </td>
                                     {% endfor %}
                                     <td>
@@ -74,7 +75,6 @@
                             <tr>
                                 <th>#</th>
                                 <th>{{ 'view.user.permissions.table_headers.role'|trans }}</th>
-                                <th>{{ 'view.user.permissions.table_headers.description'|trans }}</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -82,7 +82,6 @@
                                 <tr>
                                     <td>{{ loop.index }}</td>
                                     <td>{{ role|trans }}</td>
-                                    <td>{{ roleDescriptions[role]|trans }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
