feat: expirationDate added in DB, on the user edit and add page, on the userList page, still no login check, and problem in the validation/constraints when setting a date in the add and edit

--- a/EMS/core-bundle/src/Resources/views/user/add.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/add.html.twig
@@ -25,6 +25,7 @@
 	    	    {{ form_row(form.circles) }}
 	    	{% endif %}
 			{{ form_row(form.wysiwygProfile) }}
+            {{ form_row(form.expirationDate) }}
     	</div>
     	<div class="col-md-6">
             {% if form.userOptions.custom_options is defined %}
