fix: remarks of PR done

--- a/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/permissions.html.twig
@@ -112,7 +112,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                                {% for role in rolesFct %}
+                                {% for role in rolesFunctionality %}
                                     <tr>
                                         <td>{{ role|trans }}</td>
                                         <td>
