fix: remark PR about translation

--- a/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/permissions/specific-permissions.html.twig
@@ -22,8 +22,8 @@
                         <table class="table table-condensed table-striped">
                             <tbody>
                             <tr>
-                                <th class="text-center" style="width: 10px">Content Type</th>
-                                <th class="text-center" style="width: 20px">Icon</th>
+                                <th class="text-center" style="width: 10px">{{ 'view.user.permissions.table_headers.content_type'|trans }}</th>
+                                <th class="text-center" style="width: 20px">{{ 'view.user.permissions.table_headers.icon'|trans }}</th>
                                 <th>{{ 'view.user.permissions.table_headers.view'|trans }}</th>
                                 <th>{{ 'view.user.permissions.table_headers.create'|trans }}</th>
                                 <th>{{ 'view.user.permissions.table_headers.edit'|trans }}</th>
