--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/link-modal.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/link-modal.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'ems-adminui-twigs' %}
-<div class="modal core-modal fade" id="link-modal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal core-modal fade" id="link-modal" tabindex="-1" role="dialog" aria-hidden="true" data-modal-init-url="{{ path('emsco_wysiwyg_modal_load_link') }}">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
