--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/modal/link.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/modal/link.html.twig
@@ -1,2 +1,1 @@
-<a href="https://www.foobar.com/" class="editor-link-picker">Foobar</a>
-<a href="https://www.google.com/" class="editor-link-picker">Google</a>
+{{ form(form) }}
