--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -207,11 +207,27 @@ div.media-lib {
             padding: 8px;
             background-color: var(--background-light);
 
-            div.core-js-progress {
+            .upload-file {
               background: var(--background-white);
               padding: 8px;
               border-radius: 3px;
               border: 1px solid var(--color-border);
+              display: flex;
+              align-items: flex-start;
+              column-gap: 8px;
+
+              .core-js-progress {flex: 1}
+              button {
+                display: none;
+                background: none;
+                color: var(--color-icon);
+                border: none;
+                padding: 0;
+                font: inherit;
+                cursor: pointer;
+                outline: inherit;
+              }
+              &.upload-error { button { display: inline-block; } }
             }
           }
         }
