--- a/EMS/core-bundle/src/Resources/views/environment/index.html.twig
+++ b/EMS/core-bundle/src/Resources/views/environment/index.html.twig
@@ -1,7 +1,9 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %}{{ 'view.environment.index.title'|trans }}{% endblock %}
-{% block pagetitle %}{{ 'view.environment.index.pagetitle'|trans }}{% endblock %}
+{% block pagetitle %}
+    <i class="fa fa-database"></i>&nbsp;{{ 'view.environment.index.pagetitle'|trans }}
+{% endblock %}
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
@@ -18,12 +20,6 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="box ">
-                <div class="box-header with-border">
-                    <i class="fa fa-database"></i>
-                    <h3 class="box-title">{{ 'view.environment.index.local_environment_label'|trans }}</h3>
-                </div>
-                <!-- /.box-header -->
                 <div>
                     {%  set toolbar %}
                         <a class="btn btn-primary" href="{{ path('ems_core_environment_add') }}"><i class="fa fa-plus"></i> {{ add_label|default(form.vars.add_label)|trans }}</a>
@@ -35,7 +31,6 @@
                         toolbar: toolbar
                     }) }}
                 </div>
-            </div>
 
 
             {% set found = false %}
