--- a/EMS/core-bundle/src/Resources/views/environment/view.html.twig
+++ b/EMS/core-bundle/src/Resources/views/environment/view.html.twig
@@ -1,7 +1,7 @@
 {% extends '@EMSCore/base.html.twig' %}{% trans_default_domain 'EMSCoreBundle' %}
 
 {% block title %}View the environment {{environment.name}}{% endblock %}
-{% block pagetitle %}View the environment {{environment.name}}{% endblock %} 
+{% block pagetitle %}View the environment {{environment.name}}{% endblock %}
 {% block breadcrumb %}
 	<ol class="breadcrumb">
 		<li><a href={{ path('environment.index') }}><i class="fa fa-database"></i> Environments</a></li>
@@ -36,7 +36,7 @@
 						'icon': 'close'
 					}%}
                     {% include '@EMSCore/elements/get-button.html.twig' with {
-							'url': path('environment.edit', {'id': environment.id}),
+							'url': path('ems_core_environment_edit', {'environment': environment}),
 							'label': 'Edit',
 							'icon': 'pencil'
 						}%}
