fix: also check unique file name on move

--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -199,6 +199,6 @@
                 {{ submitLabel|default('media_library.submit'|trans) }}
             </button>
         {% endif %}
-        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'media_library.cancel'|trans }}</button>
+        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'media_library.close'|trans }}</button>
     </div>
 {%- endblock media_lib_modal_footer -%}
