--- a/EMS/core-bundle/src/Resources/views/environment/index.html.twig
+++ b/EMS/core-bundle/src/Resources/views/environment/index.html.twig
@@ -84,17 +84,17 @@
                                             <td>
                                                 <div class="btn-group">
                                                     {% include '@EMSCore/elements/get-button.html.twig' with {
-                                                        'url': path('ems_core_environment_view', {'environment': environment}),
+                                                        'url': path('environment.view', {'id': environment.id}),
                                                         'label': 'view.environment.index.view_button'|trans,
                                                         'icon': 'eye'
                                                     } %}
                                                     {% include '@EMSCore/elements/get-button.html.twig' with {
-                                                        'url': path('ems_core_environment_edit', {'environment': environment}),
+                                                        'url': path('environment.edit', {'id': environment.id}),
                                                         'label': 'view.environment.index.edit_button'|trans,
                                                         'icon': 'pencil'
                                                     } %}
                                                     {% include '@EMSCore/elements/post-button.html.twig' with {
-                                                        'url': path('ems_core_environment_edit', {'environment': environment}),
+                                                        'url': path('environment.remove', {'id': environment.id}),
                                                         'message': 'view.environment.index.confirm_dettach'|trans({'%name%': environment.label }),
                                                         'label': 'view.environment.index.dettach_button'|trans,
                                                         'icon': 'trash'
@@ -190,7 +190,7 @@
                                                     'icon': 'pencil'
                                                 } %}
                                                 {% include '@EMSCore/elements/post-button.html.twig' with {
-                                                    'url': path('ems_core_environment_attach', {'name': managedAlias.alias }),
+                                                    'url': path('environment.attach', {'name': managedAlias.alias }),
                                                     'message': 'view.environment.index.attach_alias_confirm'|trans({'%name%': managedAlias.name}),
                                                     'label': 'view.environment.index.attach_button'|trans,
                                                     'icon': 'plus',
@@ -251,7 +251,7 @@
                                         <td>
                                             <div class="btn-group">
                                                 {% include '@EMSCore/elements/post-button.html.twig' with {
-                                                    'url': path('ems_core_environment_attach', {'name': name }),
+                                                    'url': path('environment.attach', {'name': name }),
                                                     'message': 'view.environment.index.attach_alias_confirm'|trans({'%name%': name}),
                                                     'label': 'view.environment.index.attach_button'|trans,
                                                     'icon': 'plus',
