--- a/EMS/core-bundle/src/Resources/views/environment/view.html.twig
+++ b/EMS/core-bundle/src/Resources/views/environment/view.html.twig
@@ -36,7 +36,7 @@
 						'icon': 'close'
 					}%}
                     {% include '@EMSCore/elements/get-button.html.twig' with {
-							'url': path('ems_core_environment_edit', {'environment': environment}),
+							'url': path('environment.edit', {'id': environment.id}),
 							'label': 'Edit',
 							'icon': 'pencil'
 						}%}
