refactor-fix: environment routing is better, setDynamic() used in EnvDataTableType to make it work, still an error with the orderKey null when I add or delete an environment, and a few other things...

--- a/EMS/core-bundle/src/Resources/views/environment/index.html.twig
+++ b/EMS/core-bundle/src/Resources/views/environment/index.html.twig
@@ -22,7 +22,7 @@
         <div class="col-md-12">
                 <div>
                     {%  set toolbar %}
-                        <a class="btn btn-primary" href="{{ path('ems_core_environment_add') }}"><i class="fa fa-plus"></i> {{ add_label|default(form.vars.add_label)|trans }}</a>
+                        <a class="btn btn-primary" href="{{ path('environment.add') }}"><i class="fa fa-plus"></i> {{ add_label|default(form.vars.add_label)|trans }}</a>
                     {%  endset %}
 
                     {% form_theme form '@EMSCore/form/forms.html.twig' %}
