--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -84,16 +84,11 @@
 
 {% block bypassdatafield_row -%}
 	{% if form.value is defined %}
-		<div {{ block('widget_attributes') }} >
-			<div class="form-group">
-                {{ form_label(form.value) }}
-                {{ form_widget(form.value) }}
-					{% if form.vars.helptext is defined and form.vars.helptext %}
-						<div class="help-block">{{ form.vars.helptext|raw }}</div>
-					{% endif %}
-                {{ form_errors(form.value) }}
-			</div>
-		</div>
+		{{ form_row(form.value, {
+			data: form.vars.data,
+			help: form.vars.helptext|default(null),
+			help_html: true,
+		}) }}
     {% endif %}
 {%- endblock bypassdatafield_row %}
 
@@ -474,12 +469,13 @@
 {% block tabsfieldtype_errors -%}
 {% endblock tabsfieldtype_errors -%}
 
-{% block form_errors %}
-	{% if form.vars.helptext is defined and form.vars.helptext %}
-		<div class="help-block">{{ form.vars.helptext|raw }}</div>
+{% block form_help %}
+	{% if helptext is defined %}
+		{% set help = helptext %}
+		{% set help_html = true %}
 	{% endif %}
 	{{ parent() }}
-{% endblock form_errors %}
+{% endblock form_help %}
 
 {% block tabsfieldtype_row -%}
 {# <div class="form-group{% if class %} {{ class }}{% else %} col-xs-12 {% endif %}{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}">#}
