--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -1039,8 +1039,8 @@
 
 <div class="card card-default file-uploader-row{% if (not compound or force_error|default(false)) and not valid %} has-error{% endif %}"{% if form.vars.multiple|default(false) %} data-multiple="{{ multipleTemplate|e('html_attr') }}"{% endif %}>
 	<div class="card-heading">
-		<h3 class="card-title">
-			<i class="fa fa-file-o"></i>
+		<h3 class="card-title m-2">
+			<i class="fa fa-file"></i>
 			{{ form_label(form) }}
 		</h3>
 	</div>
@@ -1120,10 +1120,12 @@
 			</div>
 		{% else %}
 			<div class="btn-group">
-				<input type="file" id="file-upload-{{ form.vars.id }}" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %}>
-				<label class="btn btn-default" for="file-upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> {{ 'fields.asset.upload-file'|trans|e('html_attr') }}</label>
+                <label class="btn btn-default" for="file-upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> {{ 'fields.asset.upload-file'|trans|e('html_attr') }}</label>
+                <input type="file" id="file-upload-{{ form.vars.id }}" class="file-uploader-input" {% if form.vars.disabled %}disabled="disabled"{% endif %}>
+                <button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server">
+                    <i class="fa fa-folder-open"></i><span class="visually-hidden">{{ 'fields.asset.browse-server'|trans }}</span>
+                </button>
 			</div>
-			<button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server"><i class="fa fa-folder-open-o"></i><span class="visually-hidden">{{ 'fields.asset.browse-server'|trans }}</span></button>
 			<div class="btn-group">
 				<button type="button" class="btn btn-small btn-default asset-details" data-bs-toggle="modal" data-bs-target="#asst-details-{{ form.vars.id }}">
 				  	<i class="fa fa-info"></i>
@@ -1141,8 +1143,8 @@
 {% block filetype_row %}
 <div {% with {attr: row_attr|merge({class: 'card card-default file-uploader-row'})} %}{{ block('attributes') }}{% endwith %} {% if form.vars.meta_fields %}data-meta-fields{% endif %}>
 	<div class="card-heading">
-		<h3 class="card-title">
-			<i class="fa fa-file-o"></i>
+		<h3 class="card-title m-2">
+			<i class="fa fa-file"></i>
 			{{ form_label(form) }}
 		</h3>
 	</div>
@@ -1204,10 +1206,12 @@
 	</div>
 	<div class="card-footer">
 		<div class="btn-group">
-			<input type="file" id="upload-{{ form.vars.id }}" class="file-uploader-input">
-			<label for="upload-{{ form.vars.id }}"><i class="fa fa-upload"></i> Upload file</label>
-		</div>
-		<button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server"><i class="fa fa-folder-open-o"></i><span class="visually-hidden">{{ 'fields.asset.browse-server'|trans }}</span></button>
+            <label for="upload-{{ form.vars.id }}" class="btn btn-default"><i class="fa fa-upload"></i> Upload file</label>
+            <input type="file" id="upload-{{ form.vars.id }}" class="file-uploader-input">
+            <button type="button" data-href="{{ path('ems_core_uploaded_file_wysiwyg_modal') }}"  class="btn btn-small btn-default file-browse-server">
+                <i class="fa fa-folder-open"></i><span class="visually-hidden">{{ 'fields.asset.browse-server'|trans }}</span>
+            </button>
+        </div>
 		<div class="btn-group">
 			<button type="button" class="btn btn-small btn-default asset-details" data-bs-toggle="modal" data-bs-target="#asst-details-{{ form.vars.id }}">
               <i class="fa fa-info"></i>
