--- a/EMS/core-bundle/src/Resources/views/form/forms.html.twig
+++ b/EMS/core-bundle/src/Resources/views/form/forms.html.twig
@@ -173,7 +173,7 @@
     {%- set value = attribute(line.data, column.attribute) -%}
     {% if column.valid(line.data) %}
         {{- block('emsco_form_table_column_data_label_prefix') -}}
-            {% if column.attribute == 'label' and line.data.color is defined %}
+            {% if column.attribute == 'label' and column.colorAttribute == 'color' %}
                 <span class="badge bg-{{ line.data.color }}">{{- value -}}</span>
             {% else %}
                 {{ value }}
