--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/fields.html.twig
@@ -119,8 +119,8 @@
 {%- endblock icontext_widget %}
 
 {% block icontext_help %}
-    <div class="clearfix">
-        <span class="float-end text-counter form-text" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}" data-counter-target="{{ form.vars.id }}"></span>
+    <div class="d-flex justify-content-between flex-row-reverse">
+        <span class="text-counter form-text" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}" data-counter-target="{{ form.vars.id }}"></span>
         {{ block('form_help') }}
     </div>
 {% endblock icontext_help %}
@@ -1478,8 +1478,8 @@
 {%- endblock -%}
 
 {% block textarea_help %}
-    <div class="clearfix">
-        <span class="float-end text-counter form-text" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}" data-counter-target="{{ form.vars.id }}"></span>
+    <div class="d-flex justify-content-between flex-row-reverse">
+        <span class="text-counter form-text" data-counter-label="{{ 'field_type.textarea.counter'|trans|e('html_attr') }}" data-counter-target="{{ form.vars.id }}"></span>
         {{ block('form_help') }}
     </div>
 {% endblock textarea_help %}
