--- a/EMS/core-bundle/src/Resources/views/wysiwygprofile/index.html.twig
+++ b/EMS/core-bundle/src/Resources/views/wysiwygprofile/index.html.twig
@@ -12,11 +12,11 @@
 	<div class="col-md-6">
         <div>
             {%  set toolbar %}
-                <a class="btn btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> {{ add_label|default(form.vars.add_label)|trans }}</a>
+                <a class="btn btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> {{ add_label|default(formProfiles.vars.add_label)|trans }}</a>
             {%  endset %}
 
-            {% form_theme form '@EMSCore/form/forms.html.twig' %}
-            {{ form(form, {
+            {% form_theme formProfiles '@EMSCore/form/forms.html.twig' %}
+            {{ form(formProfiles, {
                 reorder_label: 'environment.index.reorder',
                 toolbar: toolbar
             }) }}
@@ -25,63 +25,15 @@
     <div class="col-md-6">
         <div>
             {%  set toolbar %}
-                <a class="btn btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> </a>
+                <a class="btn btn-primary" href="{{ path('ems_wysiwyg_profile_new') }}"><i class="fa fa-plus"></i> {{ add_label|default(formStylesSet.vars.add_label)|trans }}</a>
             {%  endset %}
 
-            {% form_theme form '@EMSCore/form/forms.html.twig' %}
-{#            {{ form(form, {#}
-{#                reorder_label: 'environment.index.reorder',#}
-{#                toolbar: toolbar#}
-{#            }) }}#}
+            {% form_theme formStylesSet '@EMSCore/form/forms.html.twig' %}
+            {{ form(formStylesSet, {
+                reorder_label: 'wysiwyg.index.reorder',
+                toolbar: toolbar
+            }) }}
         </div>
-{#		<div class="box" id="styles-set-box">#}
-{#			<div class="box-header with-border">#}
-{#				<i class="fa fa-css3"></i>#}
-{#				<h3 class="box-title">{{ 'WYSIWYG styles sets'|trans }}</h3>#}
-{#				<div class="btn-group  pull-right">#}
-{#					<a class="btn btn-xs btn-primary" href="{{ path('ems_wysiwyg_styles_set_new') }}"><i class="fa fa-plus"></i> {{ 'Add a style set'|trans }}</a>#}
-{#				</div>#}
-{#			</div>#}
-{#			<!-- /.box-header -->#}
-{#			{% if stylesSets|length %}#}
-
-{#                {{ form_start(formStylesSet) }}#}
-{#    			<div class="box-body no-padding">#}
-{#    				<ol class="nested-sortable vertical" id="root-list">#}
-{#    					{% for stylesSet in stylesSets %}#}
-{#    						<li id="{{ stylesSet.id }}" class="mjs-nestedSortable-no-nesting mjs-nestedSortable-leaf">#}
-{#                				<div class="box-header ui-sortable-handle">#}
-{#        							<div class="pull-right box-tools ui-sortable-handle">#}
-{#        								<div class="btn-group">#}
-{#                                            {% include '@EMSCore/elements/get-button.html.twig' with {#}
-{#    											'url':  path('ems_wysiwyg_styles_set_edit', {'id': stylesSet.id}),#}
-{#    											'label': 'Edit',#}
-{#    											'icon': 'pencil'#}
-{#    										}%}#}
-{#        								</div>#}
-{#        							</div>#}
-{#        							<h3 class="box-title">{{ stylesSet.name }}</h3>#}
-{#        						</div>#}
-{#        					</li>#}
-{#    					{% endfor %}#}
-{#    				</ol>#}
-{#					</div>#}
-{#        		    <div>#}
-{#        		    	<div class="box-footer">#}
-{#            				<div class="btn-group">#}
-{#            				    {{ form_widget(formStylesSet.reorder) }}#}
-{#            				</div>#}
-{#                		</div>#}
-{#                	</div>#}
-{#        		    {{ form_end(formStylesSet) }}#}
-{#            		<!-- /.box-footer -->#}
-{#				{% else %}#}
-{#    				<div class="box-body">#}
-{#					    {{'Click on \'Add a styles set\' to create a first styles set'|trans}}#}
-{#					</div>#}
-{#				{% endif %}#}
-{#			<!-- /.box-body -->#}
-{#		</div>#}
 	</div>
 </div>
 {% endblock %}
