fix: rename dev.xml to debug.xml
No more _emsf in route names.
In the web in dev mode the _emsf/ routes are still available
In the admin the form routes are prefixed with emsf/ (enable forms in channel and also debug routes)

--- a/EMS/form-bundle/src/Resources/views/debug/iframe.html.twig
+++ b/EMS/form-bundle/src/Resources/views/debug/iframe.html.twig
@@ -5,7 +5,7 @@
 {% block actions %}
     {% set requestQuery = app.request.query.all %}
     <div class="btn-group px-2" role="group" aria-label="go iframe">
-        <a href="{{ path('_emsf_debug_form', { 'ouuid': config.id, '_locale': locale }) }}" class="btn btn-primary btn-sm"><b>FORM</b></a>
+        <a href="{{ path('emsf_debug_form', { 'ouuid': config.id, '_locale': locale }) }}" class="btn btn-primary btn-sm"><b>FORM</b></a>
     </div>
     <div class="btn-group px-2" role="group" aria-label="Locales">
         {% for l in locales %}
